--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,86 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_stone"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/holo_green_light"
+        android:src="@drawable/stone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iv_paper"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_scissors"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/holo_blue_light"
+        android:src="@drawable/scissors"
+        app:layout_constraintBottom_toBottomOf="@id/iv_paper"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/iv_paper"
+        app:layout_constraintTop_toTopOf="@id/iv_paper" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_paper"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/holo_orange_dark"
+        android:src="@drawable/paper"
+        app:layout_constraintBottom_toBottomOf="@id/iv_stone"
+        app:layout_constraintEnd_toStartOf="@id/iv_scissors"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/iv_stone"
+        app:layout_constraintTop_toTopOf="@id/iv_stone" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_player1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/query"
+        app:layout_constraintBottom_toTopOf="@id/iv_stone"
+        app:layout_constraintEnd_toStartOf="@id/iv_player2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_player2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/query"
+        app:layout_constraintBottom_toBottomOf="@id/iv_player1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/iv_player1"
+        app:layout_constraintTop_toTopOf="@id/iv_player1" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/iv_vs"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/vs"
+        app:layout_constraintBottom_toBottomOf="@id/iv_player1"
+        app:layout_constraintEnd_toEndOf="@id/iv_player2"
+        app:layout_constraintStart_toStartOf="@id/iv_player1"
+        app:layout_constraintTop_toTopOf="@id/iv_player1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
